src/index.css
:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
}
body{
  margin: 0;
  padding: 0;
}

/* Navbar section */
.navbar {
  display: flex;
  flex-direction: row;
  justify-content:space-between;
  background-color: grey;
  overflow: hidden;
  position: fixed;
  top: 0;
  width: 100%;
}
.poke-icon {
  filter: invert(100%);
  width: 2.5rem;
  padding: 0.8rem;
}
nav {
  display: flex;
  align-items: center;
  font-size: large;
}
a {
  margin: 0 1rem;
  text-decoration: none;
}
.active {
  color: red;
}
.not-active {
  color: whitesmoke;
}

/*Home section*/
main {
  margin-top: 65px;
  padding: 0.5rem;
}
section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
section img{
  max-width: 50%;
}
section h3 {
  margin-bottom: 0;
}
section input {
  margin: 1rem;
  padding: 0 2rem;
  border: 2px double grey;
}
section button{
  background-color: red;
  color: whitesmoke;
  border: 0;
  border-radius: 10%;
  padding: 0.2rem 0.5rem;
  transition: all 0.5s ease;
}
section button:hover {
  transform:scale(1.1,1.1)
}

/* Character - PokeFinder section*/
.pokefinder-main {
  margin-top: 60px
}
.pokefinder-main section {
  display: flex;
  flex-direction: row;
  padding: 1rem;
}
.pokefinder-main section img {
  max-height: 400px;
}
.pokefinder-main section aside{
  border: 2px solid grey;
  padding: 0.5rem;
  border-radius: 20%;
}

